SERVER-23715: Make the failure to mmap a fatal error